[package]
name = "interim"
version = "0.1.1"
authors = ["Conrad Ludgate <conradludgate@gmail.com"]
edition = "2021"
description = "parses simple English dates, inspired by Linux date command, and forked from chrono-english"
repository = "https://github.com/conradludgate/interim"
readme = "README.md"
license="MIT"
rust-version = "1.65.0"

[features]
default = ["std"]
std = []

[dependencies]
time = { version = "0.3.9", default-features = false, optional = true }
chrono = { version = "0.4.20", default-features = false, optional = true }
logos = "0.13.0"

[dev-dependencies]
chrono = { version = "0.4.20", default-features = false, features = ["clock"] }
time = { version = "0.3.9", default-features = false, features = ["formatting"] }

# Properly document all features on docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
